--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,9 @@
                 "--base_lr",
                 "0.05",
                 "--batch_size",
-                "2"
+                "2",
+                "--n_gpu",
+                "1"
             ]
         }
     ]
